src/app/pages/solution/solution.component.scss
@import '~src/variables.scss';

$cx-gray-color-4: #595b61;
$cx-hover-color: rgba(#ecf4fc, 0.7);
$cx-font-size-12: 12px;
$cx-font-size-16: 16px;
$cx-font-size-18: 18px;
$cx-font-size-24: 24px;

.cx-breadcrumb-bar {
	background-color: #fff;
}

.facet-navigation__items__wrapper {
	flex-shrink: 1;
	padding: 0 2rem;
	overflow: hidden;
	scroll-behavior: smooth;
}

.facet-navigation__link {
	display: flex;
	flex-flow: column nowrap;
	position: relative;
	width: 312px;
	height: 146px;
	border: none;
	-webkit-appearance: none;
	border-left: 1px solid #c2c2c2;
	align-items: center;
	justify-content: center;
	cursor: pointer;
	box-sizing: border-box;
	background-color: transparent;

	&--selected {
		box-shadow: 0 10px 17px 0 rgba(0, 0, 0, 0.2);
		clip-path: polygon(-20% 0%, 120% 0%, 120% 120%, -20% 120%);

		p {
			color: $accent-color1;
		}
	}

	&:focus {
		outline-offset: -4px;
	}
}

.facet-navigation {
	display: grid;
	margin: 0;
	grid-template-columns: auto auto auto;
	justify-content: center;
	background-color: #fff;
	grid-template-rows: max-content;

	&__left,
	&__right {
		background: none;
		border: none;

		@extend %facet-navigation__nav-btn;
	}

	&__items {
		justify-content: center;
		display: inline-flex;
		margin: 0;
	}

	&__list-item {
		list-style: none;

		&:last-child {
			.facet-navigation__link {
				border-right: 1px solid #c2c2c2;
			}
		}
	}
}

%facet-navigation__nav-btn {
	display: flex;
	height: 100%;
	max-height: 146px;
	width: 55px;
	padding: 0 20px;
	align-items: center;
	justify-content: center;
	cursor: pointer;

	::ng-deep svg {
		width: 55px;
		height: auto;

		g {
			opacity: 1;
		}

		polygon {
			fill: #d8d8d8;
			opacity: 1;
		}
	}
}

.facet-navigation__items__item__label {
	margin: 0;
	color: $default-text-color;
	font-size: 14px;
	font-weight: normal;
	text-transform: uppercase;
}

.kmii__border {
	width: 100%;
	height: 4px;
	background: transparent;
	position: absolute;
	bottom: 0;

	&--selected {
		border-bottom: 4px solid $accent-color1;
	}
}

.kmii__detailed {
	height: 101px;
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
}

.kmii__detailed__graphic {
	height: 101px;
	display: flex;
	align-items: center;
}

.kmii__insights {
	display: flex;
	height: 100%;
	width: 100%;
	align-items: center;
	justify-content: center;
}

.kmii__insights__num {
	margin-right: 5px;
	color: $black-text-color;
	font-size: 46px;
	font-weight: 300;

	&--selected {
		color: $accent-color1;
	}
}

.kmii__insights__title {
	color: $gray-text-color;
	font-size: 14px;
}

.kmii__insights__change {
	color: $gray-text-color;
	font-size: 16px;
	text-align: center;
}

.kmii__insights__arrow {
	height: 22px;
	width: 22px;
	padding-left: 2px;

	::ng-deep svg {
		height: 22px;
		width: 22px;
		transform: rotate(180deg);

		polygon {
			fill: $accent-color2;
		}
	}
}

.kmii__resolution__item {
	display: flex;
	justify-content: flex-start;
	align-items: center;
}

.kmii__resolution__label {
	font-size: 10px;
	line-height: 12px;
	color: $gray-text-color;
	width: 20px;
	margin-right: 10px;

	&--selected {
		color: $accent-color1;
	}
}

.kmii_resolution__value {
	color: $black-text-color;
	font-size: 26px;
	font-weight: 200;
	line-height: 12px;

	&--selected {
		color: $accent-color1;
	}
}

/* Context Selector styling start */

.cs {
	display: flex;
	align-items: center;
	padding: 20px;

	&__home {
		width: 26px;
		height: 25px;
		display: flex;
		align-items: center;
		outline: none;
		cursor: pointer;

		::ng-deep svg {
			width: 26px;
			height: 25px;
		}
	}

	&__next-icon {
		width: 10.86px;
		height: 30px;
		margin: 0 20px;

		::ng-deep {
			svg {
				height: 25px;

				polygon {
					fill: rgba(#232323, 0.22);
				}
			}
		}
	}

	&__context {
		position: relative;
		margin-left: 15px;
		margin-right: 35px;
	}

	&__context__label {
		color: $gray-text-color;
		font-size: 12px;
		line-height: 14px;
		text-transform: uppercase;
	}

	.group-label {
		color: $gray-text-color;
		font-size: $cx-font-size-12;
		text-transform: uppercase;
	}

	.dropdown {
		> a {
			color: $cx-gray-color-4;
			font-size: $cx-font-size-18;

			&::after {
				content: "\25be";
				font-size: $cx-font-size-24;
				top: -4px;
				transition: none;
			}

			&:hover,
			&:active,
			&:focus {
				color: $default-link-color;
			}
		}

		&.active {
			> a::after {
				top: 4px;
			}
		}

		.dropdown__menu a {
			border: 0 none;
			padding: 10px 20px 10px 40px;
			height: unset;
			line-height: unset;
			font-size: $cx-font-size-16;

			&.selected {
				background-color: #ecf4fc !important;
				color: $default-link-color !important; // Required to override cui color

				&::after {
					font-size: $cx-font-size-18;
					left: 10px;
					right: unset;
				}
			}

			&:hover {
				background-color: $cx-hover-color;
			}
		}
	}
}

/* Context Selector styling end */

.content {
	display: block;
	margin-left: auto;
	margin-right: auto;
	overflow-y: hidden;
	padding: 10px 22px 10px 40px;
}

.icon--mid {
	font-size: 24px;
}

.clickable {
	cursor: pointer;
}

.facet--selected {
	border-bottom: 4px solid $primary;
	box-shadow: $base-box-shadow-large;
}

.facetLabel {
	width: 20px;
}

.detailsContainer {
	box-shadow: $base-box-shadow-large;
	position: absolute;
	z-index: 10000;
	height: 100%;
	right: 0;
	width: 30%;
}

.full-width {
	width: 100%;
}

.problem-resolution-tab-content {
	font-size: 26px;
	line-height: 0;
	padding: 20px;
}

#slideout {
	position: absolute;
	top: 73px;
	width: 120px;
	right: -75px;
	cursor: pointer;
	transition-duration: 0.5s;
	z-index: 100;
}

#slideout.expand-on-load,
#slideout:hover {
	right: 0;
}

.panel--blgray {
	background: #f6faff;
	color: #6b81a5;
	box-shadow: 0 2px 5px #dbdbdb;
}

/* CiscoUI table styling override start */
// Chose to use specificity instead of importants
:host ::ng-deep .table {
	border: none;
	border-spacing: 2px;
	border-collapse: collapse;
	margin-top: 20px;
	color: $gray-text-color;
	position: relative;

	.sortable:hover,
	.sortable.sorted {
		color: $default-link-color;
	}

	.icon-chevron-down,
	.icon-chevron-up {
		width: 10px;
		height: 7px;
		position: relative;
		font-size: 10px;

		&::before {
			display: inline-block;
			width: 10px;
			height: 7px;
			content: '\25B2';
			position: absolute;
			top: -9px;
		}
	}

	.icon-chevron-down::before {
		transform: rotate(180deg);
		top: 9px;
	}

	.label--circle.label--tiny {
		width: 10px;
		height: 10px;
		min-width: 10px;
		min-height: 10px;
	}

	thead::after {
		content: "";
		border-bottom: 1px solid #e4e4e4;
		display: block;
		position: absolute;
		width: 100%;
		left: 0;
	}

	th {
		background-color: transparent;
		border-right: none;
	}

	td {
		border-right: none;

		.flex-center {
			// looks off when header is longer, so just aligning to the left
			justify-content: flex-start !important;
		}
	}

	tr {
		height: 42px;

		&::after {
			content: "";
			border-bottom: 1px solid #e4e4e4;
			display: block;
			position: absolute;
			width: 100%;
			left: 0;
		}

		&:first-of-type::after {
			border-bottom: none;
		}
	}

	.checkbox,
	.checkbox input,
	.checkbox__input,
	.checkbox__input::before,
	.checkbox__input::after {
		width: 18px;
		height: 18px;
		min-width: 18px;
	}

	.checkbox {
		&__input {
			&::before {
				box-shadow: unset;
				border: 1px solid #c2c2c2;
				border-radius: 0;
			}
		}

		input {
			&:hover,
			&:focus,
			&:active,
			&:checked {
				~ .checkbox__input {
					&::before {
						box-shadow: unset;
						outline: none;
						background-color: #fff;
						border: 1px solid #c2c2c2;
					}

					&::after {
						color: $accent-color1;
						font-size: 16px;
					}
				}
			}
		}
	}
}

::ng-deep .cui {
	.table--hover > tbody > tr:hover {
		background-color: rgba(236, 244, 252, 0.7);
	}

	.table--selectable > tbody {
		> tr > td:first-child {
			border-left: 0;
		}

		> tr.active {
			background-color: #ecf4fc;

			td:first-child {
				border-left: 0;
			}
		}
	}
}

/* CiscoUI table styling override end */

:host ::ng-deep .filter-bar {
	&__title {
		font-size: 14px;
		line-height: 16px;
	}

	&__item {
		background: #6a80a5;
		border-radius: 4px;
		font-size: 14px;
		line-height: 16px;
	}

	&__clear {
		font-size: 12px;
	}
}

.fullscreen-modal ::ng-deep {
	.modal--fluid {
		top: 55px;

		.modal__dialog .modal__content {
			height: 100%;
			min-height: calc(100vh - 55px);
			overflow-y: auto;
		}
	}

	.modal__close .icon-close {
		font-size: 20px;
	}
}

